# rust-ai-agent

./: .gitignore  Cargo.toml  README.md
src/: agent.rs  lib.rs  llm.rs  main.rs
src/tools/: mod.rs  web_scraper.rs
