[package]
name = "rust-ai-agents"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
async-trait = "0.1"
colored = "2.1"
scraper = "0.20"
dotenv = "0.15"

[lib]
name = "rust_ai_agents"
path = "src/lib.rs"

[[bin]]
name = "agent"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

